--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 .hero{
-    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.2)),url(/img/main.png);
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.2)),url('/img/main.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
